--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
   "dependencies": {
+    "@gnosis.pm/zodiac": "^3.3.2",
     "@openzeppelin/contracts": "^4.9.2",
+    "express": "^4.18.2",
     "solc": "^0.8.20"
-  }
+  },
+  "name": "backend-client",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tbdeath/backend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tbdeath/backend/issues"
+  },
+  "homepage": "https://github.com/tbdeath/backend#readme"
 }
